# gmail-account-creator

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  auto_gmail_creator.py  docker-compose.yml  gmail_creator.spec  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pr-labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pr-labeler.yml  release-drafter.yml  release.yml  stale.yml
config/: config.py
config_examples/: 5sim_config.txt.example  config.example.py  names.txt.example  password.txt.example  user_agents.txt.example
docs/examples/: custom_sms_provider.py
src/gmail_creator/: __init__.py  __main__.py  account_creator.py  anti_detection.py  browser.py  config.py  constants.py  ip_check.py  name_generator.py  phone_verifier.py  proxy_manager.py  stats.py  ui.py
src/gmail_creator/phone/: __init__.py  base.py  farm.py  fivesim.py  registry.py  skip.py
tests/: conftest.py  test_account_creator.py  test_anti_detection.py  test_browser.py  test_config.py  test_custom_provider_example.py  test_name_generator.py  test_phone_farm.py  test_phone_registry.py  test_phone_verifier.py  test_proxy_manager.py  test_stats.py
